# adapter-guard

./: LICENSE  README.md  meson.build
src/: adapter-guard-scanner.c  adapter-guard.c  cmd.c  main.c
src/include/: adapter-guard-scanner.h  adapter-guard.h  cmd.h
src/test/: meson.build  test_cmd.c  test_common.c
